# livechat

./: .editorconfig  .example_env  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  cert.csr  compose.yaml
src/: api.rs  cert.csr  chatstate.rs  client.rs  handler.rs  help.txt  helper.rs  lib.rs  main.rs  more.rs  ploytest.rs  serverapi.rs
src/files/: adjective.rs  adjectives.rs  animals.rs  help.txt  lib.rs
