[package]
name = "livechat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3.30"
tokio-codec = "0.1.2"
tokio-util = { version = "0.7", features = ["codec"] }
fastrand = "2.1.0"

[[bin]]
name = "livechat"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "test"
path = "src/more.rs"

[[bin]]
name = "help"
path = "src/helper.rs"

