[package]
name = "livechat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3.30"
tokio-codec = "0.1.2"
tokio-util = { version = "0.7", features = ["codec"] }
fastrand = "2.1.0"
dotenv = "0.15.0"
ratatui = "0.26.3" 
crossterm = "0.27.0"
warp = "0.3"
uuid = { version = "1", features = ["v4"] } 
serde_json = "1.0" 
tokio-stream = { version = "0.1", features = ["sync"] }  

[[bin]]
name = "livechat"
path = "src/main.rs"

[[bin]]
name = "client"
path = "client/"

[[bin]]
name = "test"
path = "src/servertui.rs"

[[bin]]
name = "help"
path = "src/helper.rs"

