[package]
name = "livechat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3.30"
tokio-codec = "0.1.2"
tokio-util = { version = "0.7", features = ["codec"] }
fastrand = "2.1.0"
dotenv = "0.15.0"
ratatui = "0.26.3" 
crossterm = "0.27.0"
warp = "0.3"
uuid = { version = "1", features = ["v4"] } 
serde_json = "1.0" 
tokio-stream = { version = "0.1", features = ["sync"] }  

polyproto = { version = "0", features = ["wasm"] }
rand = "0.8.5"
env_logger = "0.11.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "signature"] }
der = { version = "0.7.9", features = ["pem"] }
getrandom = { version = "0.2.14", optional = true }
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"], optional = true }
serde = { version = "1.0.199", optional = true, features = ["derive"] }
serde_derive = { version = "1.0.199", optional = true }
spki = { version = "0.7.3", features = ["pem"] }
thiserror = "1.0.59"
x509-cert = "0.2.5"
log = "0.4.21"
url = { version = "2.5.0", optional = true }
http = { version = "1.1.0", optional = true }

[[bin]]
name = "livechat"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/ploytest.rs"
